addressbook/templates/default/app.css
/**
 * Give space to both contact view & infolog list
 */
.et2_container {height: 50%}
.et2_container:only-child,#addressbook-index  {height: 100%}

/* Give enough (static) width to edit dialog tabs, or it will auto-size and flex */
#addressbook-edit .et2_tabbox {min-width: 535px;}
.cursorHand { cursor: hand; }
.countrySelect select { width: 150px; }
.custom_country input {display: none; }
.contactid:before { content:"#" }
.emailCol div { width: 100%; }
.fixedHeight,.telNumbers { height: 12px; overflow: hidden; text-overflow: ellipsis}
.telNumbers { white-space: nowrap; }
.leftPad5 { padding-left: 5px; }
.bold { font-weight: bold; }
.fileas select,.fileas,.owner select,.owner { 
  width: 100%; 
  font-weight: bold;
}
.photo img, .iphoto img {
  width: 60px;
}
.photo img {
  cursor: hand;
}
.uploadphoto{ 
  position: absolute;
  top: 168px;
  left: 48px;
  display:none;
  border: 2px solid black;
  background-color: #ffffff;
  padding: 4px; 
}
.checkAllArrow { padding-right: 5px; }
.typeIcon { height: 16px; width: 16px; }
.editphones,.editname{ 
  position: absolute;
  top: 10%;
  left: 30%;
  display:none;
  border: 2px solid black;
  background-color: #ffffff;
  padding: 4px; 
}
.editname{ 
  top: 97px;
  left: 173px;
}
.windowheader{
  background-image:url(../../../phpgwapi/templates/idots/images/appbox-header-background.png);
  background-repeat:repeat-x;
  height: 20px;
  border-spacing: 0px;
  border-collapse:collapse;
  border-bottom: #9c9c9c 1px solid; 
}
fieldset.phoneGroup {
  margin-top: 12px;
  font-size: 110%;
  height: 140px;
  border: solid black 2px;
  margin-bottom: 0px;
}
.phoneGroup table{
  height: 122px;
}
fieldset.emailGroup {
  margin-top: 10px;
  font-size: 110%;
  height: 112px;
  border: solid black 2px;
  margin-bottom: 0px;
}
.emailGroup table{
  height: 87px;
}
.space{
   width: 80px;
}
.noWrap{
  white-space: nowrap;
}
.customfields{
}
.customfields td{
  white-space: nowrap;
  line-height: 12px;
}
.image16 img {
  height: 16px;
}

